fixed alignment

--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
     background-color: #f5f5f5;
 }
 
-.login-field {
+.fieldset {
     padding: 30px;
     width: 100%;
     max-width: 400px;
@@ -22,7 +22,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.login-field legend {
+fieldset legend {
     font-size: 24px;
     font-weight: bold;
     text-align: center;
@@ -65,6 +65,10 @@ p {
     color: red;
     text-align: center;
     margin-bottom: 15px;
+}
+
+.register {
+    margin-top: 25px;
 }
 
 @media (max-width: 480px) {
